--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.2.1",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,11 +15,14 @@
     "@types/react-helmet": "^6.1.5",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.7.3",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
