--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/node": "^16.18.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-ga": "^2.3.0",
     "@types/react-helmet": "^6.1.5",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
