--- a/package.json
+++ b/package.json
@@ -1,55 +1,31 @@
 {
-  "name": "news-site",
+  "name": "starter-kit",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^35.2.1",
-    "@ckeditor/ckeditor5-react": "^5.0.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.2",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@types/react-ga": "^2.3.0",
-    "@types/react-helmet": "^6.1.5",
-    "antd": "^4.23.6",
-    "axios": "^1.1.3",
-    "moment": "^2.29.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-ga": "^3.3.1",
-    "react-helmet": "^6.1.0",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "sanitize-html": "^2.7.3",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@headlessui/react": "^1.6.3",
+    "@tiptap/react": "^2.0.0-beta.199",
+    "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "axios": "^1.1.3",
+    "graphql": "^16.6.0",
+    "moment": "^2.29.4",
+    "next": "12.1.4",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
