--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.6.3",
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "antd": "^4.23.6",
     "axios": "^1.1.3",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
