--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "next": "12.1.4",
+    "next-pwa": "^5.6.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1"
