--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,7 +27,7 @@
     }
   ],
   "shortcuts": [],
-  "start_url": "/",
+  "start_url": "https://newsjasoos.in",
   "background_color": "#fff",
   "display": "standalone",
   "scope": "/",
