--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,5 +13,6 @@ jobs:
           node-version: "12"
       - run: npm install
       - run: npm run build --if-present
+      - run: npm run postbuild --if-present
         env:
           CI: true
