--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "next": "12.1.4",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.11.1",
+    "next-sitemap": "^3.1.29",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
