--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -16,6 +15,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.199",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
+    "globby": "^13.1.2",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "next": "12.1.4",
