fix fir the offline

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "NJ",
+  "short_name": "News Jasoos",
   "name": "News Jasoos",
-  "start_url": "https://newsjasoos.in/",
+
   "description": "News Site about crime and bollywood news coverrage",
   "icons": [
     {
@@ -32,5 +32,8 @@
   "background_color": "#fff",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#000000"
+  "start_url": "/",
+
+  "theme_color": "#000000",
+  "prefer_related_applications": false
 }
