--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
