--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "workbox-strategies": "^6.5.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
