--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@tiptap/starter-kit": "^2.0.0-beta.199",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
+    "firebase": "^9.19.1",
     "globby": "^13.1.2",
     "graphql": "^16.6.0",
+    "localforage": "^1.10.0",
     "moment": "^2.29.4",
     "next": "12.1.4",
     "next-pwa": "^5.6.0",
@@ -25,6 +27,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
+    "react-toastify": "^9.1.2",
     "sharp": "^0.31.1",
     "workbox-core": "^6.5.4",
     "workbox-expiration": "^6.5.4",
